feat: add crete product
